--- a/FlipKartnew2.html
+++ b/FlipKartnew2.html
@@ -14,8 +14,8 @@
 
         <div id="hamburger">
        <ul id="hamburger1" style="float: left;">
-             <li class="menu"><div class="mlist"></div> <br>
-                      <div class="mlist"></div> <br>
+             <li class="menu"><div class="mlist"></div> 
+                      <div class="mlist"></div> 
                       <div class="mlist"></div></li>
               <li><img src="imgs/fkheaderlogo_exploreplus-44005d.svg" alt=""></li> 
               </ul>
@@ -51,7 +51,7 @@
 <!----flipkart body_f2 mobile purchase-->
 <div id="body_f2"><h2>Mobile Phones Big Saving Days May 2024</h2>
     <br>
-    <h3>Pick Your Favourite</h3>  <br> <div>Sort by Price: <input onclick="Price()" type="radio" name="sort"> &nbsp; Under-5000 to 10000: <input onclick="Under()" type="radio" name="sort">
+    <h3>Pick Your Favourite</h3>  <br> <div>Sort by Price: <input onclick="Price()" type="radio" name="sort" > &nbsp; Under-5000 to 10000: <input onclick="Under()" type="radio" name="sort" >
     <span>&nbsp;Sort by Name:&nbsp;<input onclick="namesort()" type="radio" name="sort"></span>
     </div>
     <br>
