--- a/FlipKartnew3.html
+++ b/FlipKartnew3.html
@@ -14,8 +14,8 @@
 
         <div id="hamburger">
        <ul id="hamburger1" style="float: left;">
-             <li class="menu"><div class="mlist"></div> <br>
-                      <div class="mlist"></div> <br>
+             <li class="menu"><div class="mlist"></div> 
+                      <div class="mlist"></div> 
                       <div class="mlist"></div></li>
               <li><img src="imgs/fkheaderlogo_exploreplus-44005d.svg" alt=""></li> 
               </ul>
