--- a/Flipkartorder.html
+++ b/Flipkartorder.html
@@ -14,15 +14,15 @@
 
         <div id="hamburger">
        <ul id="hamburger1" style="float: left;">
-             <li class="menu"><div class="mlist"></div> <br>
-                      <div class="mlist"></div> <br>
+             <li class="menu"><div class="mlist"></div> 
+                      <div class="mlist"></div> 
                       <div class="mlist"></div></li>
               <li><a href="FlipKartnew.html"><img src="imgs/fkheaderlogo_exploreplus-44005d.svg" alt=""></a></li> 
               </ul>
   
        <ul id="hamburger2" style="float: right;">
               <li><a href=""><i class="fa-solid fa-user"></i></a></li>
-              <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+              <li><a style="text-decoration: none; color: black;" href="Flipkartnew.html"><i class="fa-solid fa-cart-shopping"><sup id="order" style="color:white;background-color: red;border-radius: 150px;padding: 7px 15px;position: relative;top: -10px;"></sup></i></a> </li>
        </ul>
       </div>  
             
